YH-755: fix text-align gaugeChart

--- a/src/shared/ui/charts/GaugeChart/ui/GaugeChart.module.css
+++ b/src/shared/ui/charts/GaugeChart/ui/GaugeChart.module.css
@@ -18,8 +18,6 @@
 
 .gauge-text {
   position: absolute;
-  top: 50%;
-  left: 50%;
   text-align: center;
   font-weight: var(--font-weight-600);
 }
